--- a/templ/seglist.html
+++ b/templ/seglist.html
@@ -20,8 +20,9 @@
         <!--<div class="span1"><img src="{{p.image}}" width="40" height="40"/></div>-->
 
         <div class="span2"><h4>{{p.exp}}</h4></div>
-        <div class="span3"><b>{{p.field}} {{p.oper}} {{p.val}}</b></div>
+        <div class="span2"><b>{{p.field}} {{p.oper}} {{p.val}}</b></div>
         <div class="span3">maps to category <b>{{p.prodcat}} </b></div>
+        <div class="span2">Max Records <b>{{p.limit}} </b></div>
         <div class="span2">Active <input type="checkbox" ng-model="p.active"></div>
         </div>
     </div>
