created rootURL var

--- a/templ/adminTmpl.html
+++ b/templ/adminTmpl.html
@@ -1,3 +1,4 @@
-<div ng-controller="viewCtrl" ng-include="templateUrl">
+<!--<div ng-controller="viewCtrl" ng-include="templateUrl">-->
 
-</div>
+<!--</div>-->
+<div ng-view></div>
