--- a/templ/azteascart.html
+++ b/templ/azteascart.html
@@ -2,7 +2,7 @@
     <div class="horizontalCellRender">
         <div class="image p13nimp" data-asin="B00462PTDQ" data-ref="pd_ecc_rvi_cart_1">
             <a ng-click="launch(p)" class="title" title="{{p.title}}"> <div class="imageContainer" style="margin-bottom: 0px; margin-top: 3px;">
-                <img ng-src="{{p.brandimgUrl}}" width="78" alt="" id="" height="100" border="0">
+                <img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="78" alt="" id="" height="100" border="0">
             </div> </a>
 
         </div>
