--- a/templ/azteashor.html
+++ b/templ/azteashor.html
@@ -2,7 +2,7 @@
     <div class="image p13nimp" data-asin="B001GTT0VO" data-ref="pd_cart_recs1">
         <a ng-click="launch(p)" class="title" title="{{p.title}}">
             <div class="imageContainer" style="margin-bottom: 6px; margin-top: 0px;">
-                <img ng-src="{{p.brandimgUrl}}" width="135" alt="" id="" height="135" border="0">
+                <img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="135" alt="" id="" height="135" border="0">
                 </div>
             </a>
         </div>
