--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,6 @@
     <!--<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>-->
     <script src="jquery/jquery-1.7.min.js" type="text/javascript"></script>
     <!--<script src="jquery/jquery-1.9.1.min.js" type="text/javascript"></script>-->
-    <script src="js/detect.js"></script>
     <script src="jquery/jquery-ui.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/bootstrap-modal.js" type="text/javascript"></script>
@@ -40,6 +39,7 @@
     <script src="js/highcharts-more.js" type="text/javascript"></script>
     <script src="js/ng-grid-2.0.7.min.js" type="text/javascript"></script>
     <script src="mods/mod.js" type="text/javascript"></script>
+    <script src="js/detect.js"></script>
     <script src="service/mkpopupservice.js" type="text/javascript"></script>
     <script src="service/filterservice.js" type="text/javascript"></script>
     <script src="service/cartservice.js" type="text/javascript"></script>
@@ -65,7 +65,7 @@
 </head>
 <body>
 <div>
-    <div id="bv_admin_cont" class="container appBody" ng-include src="'http://localhost/templ/admin.html'">
+    <div id="bv_admin_cont" class="container appBody" ng-include="adminPage">
     </div>
 </div>
 </body>
