--- a/aztmpl.html
+++ b/aztmpl.html
@@ -13,7 +13,6 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.placeholder.min.js"></script>
     <script src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="js/detect.js"></script>
     <script src="js/mask.js" type="text/javascript"></script>
     <script src="assets/js/base.js"></script>
     <script src="js/angular.min.js" type="text/javascript"></script>
@@ -21,7 +20,9 @@
     <script src="js/date.js" type="text/javascript"></script>
     <script src="js/select2.js" type="text/javascript"></script>
     <script src="js/ng-grid-2.0.7.min.js" type="text/javascript"></script>
+    <script src="js/socket.io.js" type="text/javascript"></script>
     <script src="mods/mod.js" type="text/javascript"></script>
+    <script src="js/detect.js"></script>
     <script src="service/mkpopupservice.js" type="text/javascript"></script>
     <script src="service/filterservice.js" type="text/javascript"></script>
     <script src="service/cartservice.js" type="text/javascript"></script>
@@ -35,6 +36,7 @@
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
     <script src="dir/selectDir.js" type="text/javascript"></script>
+    <script src="dir/mkuploadDir.js" type="text/javascript"></script>
     <script src="dir/productDir.js" type="text/javascript"></script>
     <script src="dir/cartDir.js" type="text/javascript"></script>
     <script src="dir/gameDir.js" type="text/javascript"></script>
