--- a/omtmpl.html
+++ b/omtmpl.html
@@ -18,16 +18,18 @@
     <script src="assets/js/omove/jquery.placeholder.min.js"></script>
     <script src="assets/js/omove/jquery.simplyscroll.js"></script>
     <script src="assets/js/omove/jquery-ui-1.9.2.custom.min.js"></script>
-    <script src="js/detect.js"></script>
+
     <script src="assets/js/omove/equalheights.js"></script>
     <script src="assets/js/omove/ombase.js"></script>
     <!--<script src="js/mask.js" type="text/javascript"></script>-->
     <script src="js/angular.min.js" type="text/javascript"></script>
     <script src="js/sortable.js" type="text/javascript"></script>
+    <script src="js/socket.io.js" type="text/javascript"></script>
     <script src="js/date.js" type="text/javascript"></script>
     <!--<script src="js/select2.js" type="text/javascript"></script>-->
     <script src="js/ng-grid-2.0.7.min.js" type="text/javascript"></script>
     <script src="mods/mod.js" type="text/javascript"></script>
+    <script src="js/detect.js"></script>
     <script src="service/mkpopupservice.js" type="text/javascript"></script>
     <script src="service/filterservice.js" type="text/javascript"></script>
     <script src="service/cartservice.js" type="text/javascript"></script>
@@ -35,6 +37,7 @@
     <script src="dir/cartparms.js" type="text/javascript"></script>
     <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
     <script src="ctrl/prodctrl.js" type="text/javascript"></script>
+    <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/surveyctrl.js" type="text/javascript"></script>
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
@@ -53,7 +56,7 @@
 <body ng-app="cart">
 <div class="row-fluid" ng-controller="cartadminctrl">
     <div cart-parms app-Type="OMove" cart_zipval="30022"></div>
-    <div id="bv_cart_cont" class="container" style="display: none" ng-include="templateUrl">
+    <div id="bv_cart_cont" class="container" style="display: none" ng-include="wrapperUrl">
     </div>
 </div>
 </body>
