--- a/templ/steplist.html
+++ b/templ/steplist.html
@@ -15,7 +15,7 @@
                 <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Template<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#/admin" ng-click="showView(p)">Preview</a></li>
-                        <li><mkUpload>Upload</mkUpload></li>
+                        <li><mk-upload>Upload</mk-upload></li>
                     </ul>
                 </li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Call Center<b class="caret"></b></a>
