--- a/templ/admin.html
+++ b/templ/admin.html
@@ -26,13 +26,14 @@
             <!--<li><a href="#/admin" ng-click="loadOptLst()">Options</a></li>-->
         </ul>
     </li>
-    <li class="dropdown"><a href="#"class="dropdown-toggle"data-toggle="dropdown">Rules<b class="caret"></b></a>
+    <li class="dropdown"><a href="#"class="dropdown-toggle"data-toggle="dropdown">Tools<b class="caret"></b></a>
         <ul class="dropdown-menu">
             <li><a href="#/admin" ng-click="loadProviders()">Providers</a></li>
             <li><a href="#/admin" ng-click="loadCartSteps()">Flow</a></li>
             <li><a href="#/admin" ng-click="loadSegments()">Demographic segements</a></li>
             <li><a href="#/admin" ng-click="loadSurvey()">Survey</a></li>
             <li><a href="#/admin" ng-click="viewFlow()">Preview</a></li>
+            <li><a href="#/admin" ng-click="openCallCenter()">Call Center</a></li>
             <li><a href="#/admin" ng-click="updateGeo()">Update Geo</a></li>
             <!--<li><a href="#/admin" ng-click="loadOpt()">Options</a></li>-->
         </ul>
