--- a/templ/omcust.html
+++ b/templ/omcust.html
@@ -8,7 +8,7 @@
         <p class="mb0">Personalize your plan for your home.</p>
         <div class="txt-address4 visible-lg">{{c.address1}}, {{c.city}} {{c.state}} {{c.zip}}</div>
     </div>
-    <div class="logos" ng-repeat="p in cp"><img ng-src="{{p.brandimgUrl}}"></div>
+    <div class="logos" ng-repeat="p in cp"><img ng-src="{{topUrl}}{{p.brandimgUrl}}"></div>
 </div><!-- /box-4 -->
 
 <div class="clearer h30">&nbsp;</div>
