--- a/templ/omprods.html
+++ b/templ/omprods.html
@@ -67,7 +67,7 @@
             </div><!-- /inner -->
             <div class="new-price sameHeight6"><div class="clearfix"><span class="i1"><sup>$</sup>{{p.priceNow}}<sup>99</sup></span> <span class="i2">per mo. for 12 months<span>Regular Price ${{p.priceOrig}}</span></span></div></div>
             <div class="row sameHeight7">
-                <div class="col-lg-6 col-sm-6"><img ng-src="{{p.brandimgUrl}}" width="95" height="20"></div>
+                <div class="col-lg-6 col-sm-6"><img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="95" height="20"></div>
                 <div class="col-lg-6 col-sm-6 btn-view-details"><a data-toggle="modal" href="#plan-details1">plan details</a></div>
             </div>
         </div><!-- /box-5 -->
