--- a/templ/omprods2.html
+++ b/templ/omprods2.html
@@ -46,7 +46,7 @@
 
     <div class="row gradient-container" ng-repeat="p in products">
 
-            <div class="col-lg-3"><div><span><img ng-src="{{p.brandimgUrl}}" width="88" height="31"></span></div></div>
+            <div class="col-lg-3"><div><span><img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="88" height="31"></span></div></div>
             <div class="col-lg-6">
                 <h3 class="fld" data-content="product.title">{{p.title}}</h3>
                 <ul class="bullet-1 deals-list-item">
