--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/ext.css"/>
     <link rel="stylesheet" ng-href="{{clintCSS}}"/>
     <link href="bedit/css/bootstrap-editable.css" rel="stylesheet">
-    <link href="/static/css/select2.css" rel="stylesheet"/>
+    <link href="/css/select2.css" rel="stylesheet"/>
     <script src="js/leaflet/leaflet.js"></script>
     <!--<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>-->
     <script src="jquery/jquery-1.7.min.js" type="text/javascript"></script>
