--- a/shadowtmpl.html
+++ b/shadowtmpl.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Products</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
     <!--<link rel="stylesheet" href="assets/css/bootstrap-responsive.css"/>-->
     <!--<link rel="stylesheet" href="css/ext.css"/>-->
@@ -9,9 +8,7 @@
     <link href="assets/css/buttons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/datepicker/jquery-ui-1.10.3.custom.css" rel="stylesheet">
-    <link href="/css/select2.css" rel="stylesheet"/>
     <script src="assets/js/jquery-1.10.2.min.js"></script>
-    <script src="js/detect.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.placeholder.min.js"></script>
     <script src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
@@ -21,45 +18,36 @@
     <script src="js/sortable.js" type="text/javascript"></script>
     <script src="js/date.js" type="text/javascript"></script>
     <script src="js/select2.js" type="text/javascript"></script>
-    <script src="js/socket.io.js" type="text/javascript"></script>
     <script src="js/ng-grid-2.0.7.min.js" type="text/javascript"></script>
-    <script src="mods/mod.js" type="text/javascript"></script>
+    <script src="js/socket.io.js" type="text/javascript"></script>
+    <script src="mods/modShadow.js" type="text/javascript"></script>
+    <script src="js/detect.js"></script>
     <script src="service/mkpopupservice.js" type="text/javascript"></script>
     <script src="service/filterservice.js" type="text/javascript"></script>
     <script src="service/cartservice.js" type="text/javascript"></script>
     <script src="service/adminservice.js" type="text/javascript"></script>
     <script src="dir/cartparms.js" type="text/javascript"></script>
-    <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
-    <script src="ctrl/cartctrl.js" type="text/javascript"></script>
-    <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
+    <script src="ctrl/shadowctrl.js" type="text/javascript"></script>
     <script src="ctrl/prodctrl.js" type="text/javascript"></script>
+    <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/surveyctrl.js" type="text/javascript"></script>
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
     <script src="dir/selectDir.js" type="text/javascript"></script>
+    <script src="dir/mkuploadDir.js" type="text/javascript"></script>
     <script src="dir/productDir.js" type="text/javascript"></script>
     <script src="dir/cartDir.js" type="text/javascript"></script>
     <script src="dir/gameDir.js" type="text/javascript"></script>
     <script src="dir/providerDir.js" type="text/javascript"></script>
     <script src="dir/sortlistDir.js" type="text/javascript"></script>
     <script src="dir/chartDir.js" type="text/javascript"></script>
-    <script src="amazinjector.js" type="text/javascript"></script>
-    <!--<script src="adminNavDir.js" type="text/javascript"></script>-->
+    <script src="ctrl/adminHelper.js" type="text/javascript"></script>
 </head>
-<body style="background: #95a0aa; margin: 10px">
-<h1>Partner application</h1>
-<div class="row">
-    <div class="span1"><input name="txtZip" type="text" maxlength="5" placeholder="Zip code" id="txtZip"></div>
-    <div class="span1"><input type="submit" name="btnSearch" value="SEARCH" id="btnSearch" class="ButtonEnabled"></div>
-    <div class="span1"><input type="submit" name="btnClearForm" value="CLEAR FORM" id="btnClearForm" class="ButtonEnabled"></div>
-</div>
-<div class="row">
-    <a data-toggle="modal" href="#myModal1" class="op"><img src="assets/img/bg2.jpg"></a>
-</div>
-<div ng-app="cart" ng-controller="cartctrl">
-    <div cart-parms cart-srch="#btnSearch" cart-clr="btnClearForm" app-Type="AZ" cart-zip="txtZip" cart_zipval="0"></div>
-    <div id="bv_cart_cont" class="container" style="display: none" ng-include src="'http://localhost/templ/webmm.html'">
+<body ng-app="cart">
+<div class="row-fluid" ng-controller="shadowctrl">
+    <div cart-parms app-Type="Duke" cart_zipval="32967"></div>
+    <div id="bv_cart_cont" class="container" style="display: none" ng-include="wrapperUrl">
     </div>
 </div>
 </body>
