--- a/templ/mmprods.html
+++ b/templ/mmprods.html
@@ -12,7 +12,7 @@
 
     <div class="row gradient-container" ng-repeat="p in products">
         <div class="box-1 gradient-item clearfix">
-            <div class="col-xs-3"><div><span><img ng-src="{{p.brandimgUrl}}" width="88" height="31"></span></div></div>
+            <div class="col-xs-3"><div><span><img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="88" height="31"></span></div></div>
             <div class="col-xs-6">
                 <h3 class="fld" data-content="product.title">{{p.title}}</h3>
                 <ul class="bullet-1 deals-list-item">
