--- a/templ/ompers.html
+++ b/templ/ompers.html
@@ -8,7 +8,7 @@
                 <p class="mb0">Personalize your plan for your home.</p>
                 <div class="txt-address4 visible-lg">{{c.address1}}, {{c.city}} {{c.state}} {{c.zip}}</div>
             </div>
-            <div class="logos" ng-repeat="p in cp"><img src="{{p.brandimgUrl}}"></div>
+            <div class="logos" ng-repeat="p in cp"><img src="{{topUrl}}{{p.brandimgUrl}}"></div>
         </div><!-- /box-4 -->
 
         <div class="clearer h30">&nbsp;</div>
