--- a/templ/wforder.html
+++ b/templ/wforder.html
@@ -18,7 +18,7 @@
     <div class="row-fluid" ng-repeat="p in cp">
         <div class="row-fluid">
             <div class="span2"><div><b>{{p.provider}}</b></div>
-            <div><img ng-src="{{p.brandimgUrl}}" width="40" height="40"/></div></div>
+            <div><img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="40" height="40"/></div></div>
             <div class="span2"><h4>{{p.title}}</h4><p>{{p.desc}}</p></div>
         </div>
         <div class="row-fluid">
