--- a/templ/wfsurvey.html
+++ b/templ/wfsurvey.html
@@ -1,21 +1,26 @@
-<div class="row-fluid">
-    <div class="span8 offset1"><h2><b>Dear {{c.fname}}</b></h2><p>Congrats on your purchase! We suggest that you look at the most popular offers in the {{c.city}} area</p></div>
-</div>
+<h3 class="lego20_flexi_wirefly_grey_footer_subscription_h4">{{step.prompt}} in the {{c.city}} area</h3>
+<table class="soa-table treatment-3" border="0" cellpadding="0" cellspacing="40" width="689">
 
-<div class="row-fluid">
-    <div class="span8 offset1"><p>To help us narrow down the choices for you, please answer the following questions</p></div>
-</div>
-<div ui-sortable="sortableOptions" ng-model="listData">
-    <div class="row-fluid"  ng-repeat="q in listData" ng-class-odd="'odd_row'" ng-class-even="'even_row'">
-        <div class="span4"><h3>{{q.label}}</h3></div>
-        <div class="span1"><input type="checkbox" ng-model="q.value"></div>
-    </div>
-    </div>
-<div class="row-fluid">
-    <div class="span1 offset1">
-        <div class="btn btn-info btn-small" ng-click="back()">Back</div>
-    </div>
-    <div class="span2 offset5">
-        <div class="btn btn-info" ng-click="next()">View offers</div>
-    </div>
-</div>
+    <tbody> <tr  style="margin-bottom: 40px;"> <td class="lego20_flexi_wirefly_grey_footer_subscription_h4" align="left" valign="middle" width="332"><h4 class="lego20_flexi_wirefly_grey_footer_subscription_h4">Here are some questions for you</h4>
+    </td> <td class="soa-tabletext-head" align="center" valign="middle" width="193">Tell us<br><i style="FONT-SIZE:
+
+10px; FONT-WEIGHT: normal">(This would really help)</i>
+
+    </td> </tr>  <tr ng-repeat="q in listData" style="margin-bottom: 40px;"> <td class="lego20_flexi_wirefly_grey_footer_linkcolumn_header" align="left">{{q.label}}</td>
+
+        <td style="color: #00A000;zoom:200%" align="center" ng-click="toggleAnswer(q)"> {{ q.yes && '✓' || '?' }}
+
+        </td> </tr></tbody></table>
+
+<div class="clearer h20">&nbsp;</div>
+
+<a style="cursor: pointer" ng-click="next()" title="Shop Now" alt="Shop Now">
+    <img src="/images/Wireflyhomepage/shop_now_med.gif" alt="Shop Now" class="wirefly_hp_ob_cta" border="0">
+</a>
+
+
+<div class="clearer h20">&nbsp;</div>
+
+<div class="clearer h20">&nbsp;</div>
+<div class="clearer h20">&nbsp;</div>
+<div class="clearer h20">&nbsp;</div>
