--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,7 @@
     <script src="js/jquery.iframe-transport.js"></script>
     <script src="js/jquery.fileupload.js"></script>
     <script src="js/angular.min.js" type="text/javascript"></script>
+    <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="js/sortable.js" type="text/javascript"></script>
     <script src="js/date.js" type="text/javascript"></script>
     <script src="grid/jquery.event.drag-2.2.js"></script>
@@ -46,6 +47,7 @@
     <script src="service/adminservice.js" type="text/javascript"></script>
     <script src="dir/cartparms.js" type="text/javascript"></script>
     <script src="dir/mkuploadDir.js" type="text/javascript"></script>
+    <script src="dir/dynamic.js" type="text/javascript"></script>
     <script src="ctrl/prodctrl.js" type="text/javascript"></script>
     <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
