--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,7 @@
     <script src="js/mask.js" type="text/javascript"></script>
     <script src="assets/js/base.js"></script>
     <script src="js/angular.min.js" type="text/javascript"></script>
+    <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="js/sortable.js" type="text/javascript"></script>
     <script src="js/date.js" type="text/javascript"></script>
     <script src="js/select2.js" type="text/javascript"></script>
