--- a/omtmpl.html
+++ b/omtmpl.html
@@ -23,6 +23,7 @@
     <script src="assets/js/omove/ombase.js"></script>
     <!--<script src="js/mask.js" type="text/javascript"></script>-->
     <script src="js/angular.min.js" type="text/javascript"></script>
+    <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="js/sortable.js" type="text/javascript"></script>
     <script src="js/socket.io.js" type="text/javascript"></script>
     <script src="js/date.js" type="text/javascript"></script>
