--- a/templ/stepDetail.html
+++ b/templ/stepDetail.html
@@ -1,11 +1,11 @@
 <div class="container">
-    <div class="span7 navbar navbar-inner"><div class="container">
+    <div class="navbar navbar-inner"><div class="container">
         <ul class="nav">
             <li><a ng-click="editStep()">Edit</a></li>
             <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Template<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#/admin" ng-click="showView()">Preview</a></li>
-                    <li><mk-upload>Upload</mk-upload></li>
+                    <li><a href="#/admin" ng-click="showTemplate()">Preview</a></li>
+                    <li><a href="#/admin"><mk-upload>Upload</mk-upload></a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Call Center<b class="caret"></b></a>
@@ -13,7 +13,6 @@
                     <li><a ng-click="editScript()">Script</a></li>
                 </ul>
             </li>
-            <li><a ng-click="deleteStep()">Delete</a></li>
         </ul>
     </div>
     </div>
