--- a/templ/steplisthor.html
+++ b/templ/steplisthor.html
@@ -10,9 +10,10 @@
         <div class="btn btn-small bv_btn-custom" ng-click="createStep()">New step</div>
     </div>
     <div ui-sortable="sortableOptions" class="row-fluid" ng-model="appElements[a.appID]">
-            <div class="span2 stepbox effectStep"  ng-repeat="p in appElements[a.appID]" ng-click="openStepInfo(p)">
+            <div class="span2 stepbox effectStep"  ng-repeat="p in appElements[a.appID]" >
                 <div class="stepboxnum">{{p.order}}</div>
-            <h4>{{p.title}}</h4>
+                <div class="stepdel" ng-click="deleteStep(p)"><img src="/images/admin_del_step.png" width="20" height="20"></div>
+            <h4 ng-click="openStepInfo(p)">{{p.title}}</h4>
             </div>
     </div>
     <div class="row-fluid">
@@ -20,8 +21,8 @@
         <div class="btn btn-small bv_btn-custom" ng-click="createWidget()">New widget</div>
     </div>
     <div class="row-fluid">
-        <div class="span2 stepbox effectStep" ng-repeat="w in appWidgets[a.appID]" ng-click="openStepInfo(w)">
-            <h4>{{w.title}}</h4>
+        <div class="span2 stepbox effectStep" ng-repeat="w in appWidgets[a.appID]">
+            <h4  ng-click="openStepInfo(w)">{{w.title}}</h4>
         </div>
     </div>
 </div>
