--- a/templ/wfprods.html
+++ b/templ/wfprods.html
@@ -81,7 +81,7 @@
                 <img class="specialoffer70_260_offer_block_narrow_phone_image" ng-src="{{topUrl}}{{p.typeUrl}}"  width="85" height="65"  style="border-width:0px;" alt="Samsung Galaxy S III Blue" title="Samsung Galaxy S III Blue"></a>
             <div class="specialoffer70_260_offer_block_narrow_infoblock_titles">
                 <h2 class="specialoffer70_260_offer_block_narrow_infoblock_phonename">{{p.title}}</h2>
-                <h1 class="specialoffer70_260_offer_block_narrow_infoblock_price">{{p.priceNow}}</h1>
+                <h1 class="specialoffer70_260_offer_block_narrow_infoblock_price">${{p.priceNow}}</h1>
                 <h4 id="lblPhonePriceDetails" class="specialoffer70_260_offer_block_narrow_infoblock_price">ONLY this month</h4>
                 <a style="cursor: pointer" ng-click="addToCartandNext(p)" title="Select" alt="Select">
                     <img class="add_to_cart_button_special_offer" src="/images/spacer.gif" alt="Add to Cart">
