--- a/cctmpl.html
+++ b/cctmpl.html
@@ -35,6 +35,7 @@
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
     <script src="dir/selectDir.js" type="text/javascript"></script>
+    <script src="dir/dynamic.js" type="text/javascript"></script>
     <script src="dir/mkuploadDir.js" type="text/javascript"></script>
     <script src="dir/productDir.js" type="text/javascript"></script>
     <script src="dir/cartDir.js" type="text/javascript"></script>
@@ -46,7 +47,7 @@
 </head>
 <body ng-app="cart">
 <div class="row-fluid" ng-controller="agentctrl">
-    <div cart-parms app-Type="Duke" cart_zipval="32967"></div>
+    <!--<div cart-parms app-Type="Duke" cart_zipval="32967"></div>-->
     <!--<div class="navbar navbar-inner">-->
         <!--<div class="container">-->
         <!--<ul class="nav">-->
@@ -65,12 +66,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Kiosk</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a ng-click="agentQualify">New Call</a></li>
-                <li><a ng-click="startChat">Link</a></li>
+                <li><a ng-click="startCall()">New Call</a></li>
+                <li><a ng-click="startChat()">Chat</a></li>
                 <!--<li class="dropdown">-->
                     <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>-->
                     <!--<ul class="dropdown-menu">-->
@@ -86,7 +87,9 @@
             </ul>
          </div>
     </nav>
-    <div id="bv_cart_cont" class="container" style="display: none" ng-include="wrapperUrl">
+    <div class="container" style="position: relative;width: 95%">
+        <div style="float: left; max-height: 300px;overflow-y: scroll; margin-right: 20px; border-right: solid 1px" dynamic="propsEl"></div>
+        <div id="bv_cart_cont" style="float: left" ng-include="wrapperUrl"></div>
     </div>
 </div>
 </body>
