--- a/dktmpl.html
+++ b/dktmpl.html
@@ -8,6 +8,8 @@
     <link href="assets/css/buttons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/datepicker/jquery-ui-1.10.3.custom.css" rel="stylesheet">
+    <link href="css/duke.css" rel="stylesheet">
+    <link href="css/duke2.css" rel="stylesheet">
     <script src="assets/js/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.placeholder.min.js"></script>
@@ -20,7 +22,9 @@
     <script src="js/date.js" type="text/javascript"></script>
     <script src="js/select2.js" type="text/javascript"></script>
     <script src="js/ng-grid-2.0.7.min.js" type="text/javascript"></script>
+    <script src="js/socket.io.js" type="text/javascript"></script>
     <script src="mods/mod.js" type="text/javascript"></script>
+    <script src="js/detect.js"></script>
     <script src="service/mkpopupservice.js" type="text/javascript"></script>
     <script src="service/filterservice.js" type="text/javascript"></script>
     <script src="service/cartservice.js" type="text/javascript"></script>
@@ -28,24 +32,26 @@
     <script src="dir/cartparms.js" type="text/javascript"></script>
     <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
     <script src="ctrl/prodctrl.js" type="text/javascript"></script>
+    <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/surveyctrl.js" type="text/javascript"></script>
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
     <script src="dir/selectDir.js" type="text/javascript"></script>
+    <script src="dir/mkuploadDir.js" type="text/javascript"></script>
     <script src="dir/productDir.js" type="text/javascript"></script>
     <script src="dir/cartDir.js" type="text/javascript"></script>
     <script src="dir/gameDir.js" type="text/javascript"></script>
     <script src="dir/providerDir.js" type="text/javascript"></script>
     <script src="dir/sortlistDir.js" type="text/javascript"></script>
     <script src="dir/chartDir.js" type="text/javascript"></script>
-    <script src="mminjector.js" type="text/javascript"></script>
+    <script src="dukeinjector.js" type="text/javascript"></script>
     <script src="ctrl/adminHelper.js" type="text/javascript"></script>
 
 </head>
 <body ng-app="cart">
 <div class="row-fluid" ng-controller="cartadminctrl">
-    <div cart-parms app-Type="Imagitas" cart_zipval="30144"></div>
+    <div cart-parms app-Type="Duke" cart_zipval=""></div>
     <div id="bv_cart_cont" class="container" style="display: none" ng-include="wrapperUrl">
     </div>
 </div>
