--- a/templ/agentScript.html
+++ b/templ/agentScript.html
@@ -1,4 +1,4 @@
 <div class="row-fluid flowscriptPanel">
     <h4>Instructions for agents</h4>
-    <textarea style="width:100%;margin:10px;height: 100%">{{obj.script}}</textarea>
+    <textarea style="width:100%;margin:10px;height: 100%" ng-model="obj.script"></textarea>
 </div>
