--- a/templ/dkprods.html
+++ b/templ/dkprods.html
@@ -10,10 +10,12 @@
         </div>
     </div>
 
+    <div class="clearer h20">&nbsp;</div>
+    <div class="clearer h20">&nbsp;</div>
     <div class="row gradient-container" ng-repeat="p in products">
         <div class="box-1 gradient-item clearfix">
-            <div class="col-xs-3"><div><span><img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="88" height="31"></span></div></div>
-            <div class="col-xs-6"  ng-style="{zoom: !p.point && '100%' || '150%'}">
+            <div class="col-xs-3"><div><span><img ng-src="{{topUrl}}{{p.brandimgUrl}}" width="100" height="100"></span></div></div>
+            <div class="col-xs-6">
                 <h3 class="fld" data-content="product.title">{{p.title}}</h3>
                 <ul class="bullet-1 deals-list-item">
                     <li ng-repeat="h in p.highlights">{{h}}</li>
@@ -21,15 +23,9 @@
                 <div><i class="icon-angle-right"></i> &nbsp; <a ng-click="showDetail(p)" class="deals-list-item">{{p.lblDetails}}</a></div>
               </div><!-- .col -->
             <div class="col-xs-3">
-                <div><span><img ng-show="p.chosen" src="/images/check.png" width="100" height="80"></span></div>
+                <div class="price text-center"><strong>${{p.priceNow}}</strong>/mo</div>
                 <div class="clearer h10">&nbsp;</div>
-                <div class="price text-center"  ng-style="{zoom: !p.point && '100%' || '150%'}"><strong>${{p.priceNow}}</strong>/mo</div>
-                <div class="clearer h10">&nbsp;</div>
-                <a ng-click="addToCartandNext(p)" class="btn btn-primary btn-block uppercase">Add</a>
-                <div class="clearer h10">&nbsp;</div>
-                <a ng-click="reveal(p)" class="btn btn-primary btn-block uppercase">{{ p.visible && 'Remove' || 'Suggest' }}</a>
-                <div class="clearer h10">&nbsp;</div>
-                <a ng-click="highlight(p)" class="btn btn-primary btn-block uppercase">Highlight</a>
+                <a ng-click="addToCartandNext(p)" class="btn btn-primary btn-block uppercase">Select</a>
             </div><!-- .col -->
         </div><!-- /box-1 -->
         <div class="pull-left w600" ng-show="p.openDetail">
