--- a/templ/stepDetail.html
+++ b/templ/stepDetail.html
@@ -6,6 +6,8 @@
                 <ul class="dropdown-menu">
                     <li><a href="#/admin" ng-click="showTemplate()">Preview</a></li>
                     <li><a href="#/admin"><mk-upload>Upload</mk-upload></a></li>
+                    <li><a href="#/admin" ng-click="showRaw()">Raw HTML</a></li>
+                    <li><a href="#/admin" ng-click="showIntscript()">Integration Script</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Call Center<b class="caret"></b></a>
