--- a/cctmpl.html
+++ b/cctmpl.html
@@ -28,7 +28,7 @@
     <script src="service/adminservice.js" type="text/javascript"></script>
     <script src="dir/cartparms.js" type="text/javascript"></script>
     <script src="ctrl/agentctrl.js" type="text/javascript"></script>
-    <script src="ctrl/prodctrl.js" type="text/javascript"></script>
+    <script src="ctrl/agentprodctrl.js" type="text/javascript"></script>
     <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/surveyctrl.js" type="text/javascript"></script>
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
