--- a/templ/dkcredit.html
+++ b/templ/dkcredit.html
@@ -196,7 +196,7 @@
 
 
 
-<div class="col-lg-4 col-sm-6">
+<div class="col-lg-3 col-sm-6">
     <div class="box-6">
         <div class="box-6-inner clearfix">
             <h4 class="style4 bg2">Summary of Charges <i class="icon-shopping-cart pull-right"></i></h4>
@@ -209,7 +209,7 @@
                 </thead>
                 <tbody>
                 <tr class="no-b" ng-repeat="p in cp">
-                    <td colspan="3"><strong style="font-size:16px;">{{p.provider}}</strong> <a href="#" class="fontsize11">Edit</a></td>
+                    <td colspan="2"><strong style="font-size:16px;">{{p.provider}}</strong> <a href="#" class="fontsize11">Edit</a></td>
                 </tr>
                 <tr ng-repeat="p in cp">
                     <td>{{p.title}}</td>
@@ -223,7 +223,7 @@
                 </tr>
 
                 <tr class="danger">
-                    <td colspan=""><div class="links1"><a href="#"><i class="icon-plus-sign"></i>&nbsp; view details</a> &nbsp;&nbsp;&nbsp; <a href="#"><i class="icon-minus-sign"></i>&nbsp; remove</a></div></td>
+                    <td colspan="2"><div class="links1"><a href="#"><i class="icon-plus-sign"></i>&nbsp; view details</a> &nbsp;&nbsp;&nbsp; <a href="#"><i class="icon-minus-sign"></i>&nbsp; remove</a></div></td>
                 </tr>
 
                 <tr class="no-b" ng-repeat="p in cp">
