--- a/templ/dkteas.html
+++ b/templ/dkteas.html
@@ -6,7 +6,7 @@
                 <h3>{{p.title}}</h3>
                 <h3>${{p.priceNow}}</h3>
             </a>
-            <p>Protect your sensitive electronics and major appliances from harmful electrical surges.</p>
+            <p>{{p.desc}}</p>
             <a ng-click="launch(p)"> Learn More</a>
         </li>
     </ul>
