--- a/templ/steplisthor.html
+++ b/templ/steplisthor.html
@@ -1,14 +1,24 @@
 <div style="margin-left: 50px;margin-top: 20px" ng-repeat="a in stepApps">
-        <div class="row-fluid">
-        <div class="span4"><h3>{{a.name}}</h3></div>
-        <div class="span2">Active <input type="checkbox" ng-model="a.active"></div>
-        <div class="span2 btn btn-small bv_btn-custom" ng-click="cloneApp(a)">Clone</div>
-        <div class="span1 btn btn-small" ng-click="deleteApp(a)">Delete</div>
+    <div class="navbar navbar-inner"><div class="container">
+    <ul class="nav">
+        <li class="active"><a class="brand">{{a.name}}</a></li>
+        <li><a>Active <input type="checkbox" ng-model="a.active"></a></li>
+        <li><a  ng-click="cloneApp(a)">Clone</a></li>
+        <li><a  ng-click="createStep()">New step</a></li>
+        <li><a  ng-click="deleteApp(a)">Delete</a></li>
+    </ul>
     </div>
-    <div class="row-fluid">
-        <h4>Cart</h4>
-        <div class="btn btn-small bv_btn-custom" ng-click="createStep()">New step</div>
     </div>
+    <!--<div class="row-fluid">-->
+        <!--<div class="span4"><h3>{{a.name}}</h3></div>-->
+        <!--<div class="span2">Active <input type="checkbox" ng-model="a.active"></div>-->
+        <!--<div class="span2 btn btn-small bv_btn-custom" ng-click="cloneApp(a)">Clone</div>-->
+        <!--<div class="span1 btn btn-small" ng-click="deleteApp(a)">Delete</div>-->
+    <!--</div>-->
+    <!--<div class="row-fluid">-->
+        <!--<h4>Cart</h4>-->
+        <!--<div class="btn btn-small bv_btn-custom" ng-click="createStep()">New step</div>-->
+    <!--</div>-->
     <div ui-sortable="sortableOptions" class="row-fluid" ng-model="appElements[a.appID]">
             <div class="span2 stepbox effectStep"  ng-repeat="p in appElements[a.appID]" >
                 <!--<div ng-class="{'stepboxnum stepactive': p.visible,'stepboxnum': !p.visible}">{{p.order}}</div>-->
@@ -16,13 +26,13 @@
             <h4 ng-click="openStepInfo(p)" ng-class="{'stepactive': p.visible,'': !p.visible}">{{p.title}}</h4>
             </div>
     </div>
-    <div class="row-fluid" ng-show="a.agent=='agent'">
-        <h4>Stand-alone widgets</h4>
-        <div class="btn btn-small bv_btn-custom" ng-click="createWidget()">New widget</div>
-    </div>
-    <div class="row-fluid">
-        <div class="span2 stepbox effectStep" ng-repeat="w in appWidgets[a.appID]">
-            <h4  ng-click="openStepInfo(w)">{{w.title}}</h4>
-        </div>
-    </div>
+    <!--<div class="row-fluid" ng-show="a.agent=='agent'">-->
+        <!--<h4>Stand-alone widgets</h4>-->
+        <!--<div class="btn btn-small bv_btn-custom" ng-click="createWidget()">New widget</div>-->
+    <!--</div>-->
+    <!--<div class="row-fluid">-->
+        <!--<div class="span2 stepbox effectStep" ng-repeat="w in appWidgets[a.appID]">-->
+            <!--<h4  ng-click="openStepInfo(w)">{{w.title}}</h4>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
