added survey functionality

--- a/admin.html
+++ b/admin.html
@@ -52,6 +52,8 @@
     <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
     <script src="ctrl/surveyctrl.js" type="text/javascript"></script>
+    <script src="ctrl/templateCtrl.js" type="text/javascript"></script>
+    <script src="ctrl/surveyAdminCtrl.js" type="text/javascript"></script>
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
