--- a/templ/intScript.html
+++ b/templ/intScript.html
@@ -1,4 +1,4 @@
-<div class="row-fluid flowscriptPanel">
+<div class="flowscriptPanel">
     <h4>Integration script</h4>
-    <textarea style="width:100%;margin:10px;height: 100%" ng-model="obj.integration"></textarea>
+    <textarea style="width:100%;margin:10px;min-height: 400px;overflow-y: scroll" ng-model="obj.integration"></textarea>
 </div>
