--- a/templ/rawHtml.html
+++ b/templ/rawHtml.html
@@ -1,5 +1,5 @@
 <div class="flowscriptPanel">
-    <h4>Raw html</h4>
+    <h4>Scratch Pad</h4>
     <div style="position:relative; width: 100%;height: 100%">
         <div style="position:relative;float:left; height:100%; width:20%;overflow-y:scroll">
             <h4>Actions</h4>
