--- a/templ/stepDetail.html
+++ b/templ/stepDetail.html
@@ -1,16 +1,10 @@
 <div class="container">
     <div class="navbar navbar-inner"><div class="container">
         <ul class="nav">
-            <li><a ng-click="editStep()">Edit</a></li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Template<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#/admin" ng-click="showTemplate()">Preview</a></li>
-                    <li><mk-upload path="{{rootUrl}}/step/template" fnc="onTmplUploaded(fi)" style="padding: 3px 20px"></mk-upload></li>
-                    <li><a href="#/admin" ng-click="showRaw()">Raw HTML</a></li>
-                    <li><a href="#/admin" ng-click="showIntscript()">Integration Script</a></li>
-                </ul>
-            </li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Call Center<b class="caret"></b></a>
+            <li><a ng-click="editStep()">Preferences</a></li>
+            <li><a ng-click="editTemplate()">Template</a></li>
+            <li><a ng-click="editSurvey()" ng-show="obj.isSurvey">Questions</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" ng-show="obj.isCC">Call Center<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a ng-click="editScript()">Script</a></li>
                 </ul>
